Ensure code lines get wrapped

--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -154,3 +154,7 @@ a[href^="#"] {
 #download:active {
   top: 1px;
 }
+
+pre code {
+  white-space: pre-wrap;
+}
